# TinkerkitBraccio-ROS-Driver

Codigo_TFG/ROS/paquete_tfg/: CMakeLists.txt  package.xml
Codigo_TFG/ROS/paquete_tfg/scripts/: simpleMovement.py  trajectoryMovement.py
Codigo_TFG/TFG_Driver_Arduino/: TFG_Driver.ino
